# masakari-dashboard

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst
doc/source/contributor/: contributing.rst
masakaridashboard/: dashboard.py  handle_errors.py  version.py
masakaridashboard/api/: api.py
masakaridashboard/conf/: masakari_policy.json  masakari_policy.yaml
masakaridashboard/default/: panel.py
masakaridashboard/default/templates/default/: base.html  table.html
masakaridashboard/hosts/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
masakaridashboard/hosts/templates/hosts/: _detail_overview.html  _update.html  detail.html  index.html  update.html
masakaridashboard/local/enabled/: _50_masakaridashboard.py
masakaridashboard/local/local_settings.d/: _50_masakari.py
masakaridashboard/notifications/: panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
masakaridashboard/notifications/templates/notifications/: _detail_overview.html  _progress_detail.html  index.html
masakaridashboard/segments/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
masakaridashboard/segments/templates/segments/: _addhost.html  _create.html  _detail_overview.html  _update.html  addhost.html  create.html  index.html  update.html
masakaridashboard/static/masakaridashboard/css/: style.css
masakaridashboard/test/: helpers.py  settings.py  uuidsentinel.py
masakaridashboard/test/test_data/: masakari_data.py  utils.py
masakaridashboard/vmoves/: panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
masakaridashboard/vmoves/templates/vmoves/: _detail_overview.html  detail.html  index.html
releasenotes/notes/: bug-1944679-0df043f17a8bbaff.yaml  drop-masakariclient-dep-054a456a5bf2b941.yaml  drop-py-2-7-a5322c1cb7c74c61.yaml  fix-cacert-023407ba61a4bb7a.yaml  yamlify-policy-169e72bc8abd93a1.yaml
releasenotes/source/: conf.py  index.rst
