[metadata]
name = masakari-dashboard
summary = Horizon plugin for masakari
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/masakari-dashboard
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    masakaridashboard

[build_sphinx]
all_files = 1
build_dir = doc/build
source_dir = doc/source
warning_is_error = 1
